# ragged-pad

./: LICENSE  README.md  pyproject.toml
ragged_pad/: __init__.py  pad.py
tests/: test_pad.py
