[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragged-pad"
version = "0.1.0"
description = "Fast Triton kernels for padding and unpadding ragged/variable-length tensors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Vlad Tytskiy"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["triton", "pytorch", "ragged", "varlen", "variable-length", "padding", "gpu", "cuda"]
dependencies = [
    "torch>=2.0.0",
    "triton>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/tytskiy/ragged-pad"
